tests/paczka1/fuzzy1/51336909.err
Error in line 14: OXNv S556 34,2
Error in line 15: OXNv A45 45,2
Error in line 3: 1UoB S890 73,5
Error in line 19: 1UoB S556 77,7
Error in line 33: xYUMSViR1 S779 1,9
